Fix wagtail checkbox layout issue

--- a/domestic/static/cms-admin/css/domestic-editor.css
+++ b/domestic/static/cms-admin/css/domestic-editor.css
@@ -94,7 +94,9 @@ button.button.action-choose.button-small.button-secondary {
 }
 
 #id_tags input[type='checkbox'] {
-  padding-right: 0px;
+  padding-right: 0;
+  vertical-align: middle;
+  margin-top: 0;
 }
 
 #id_tags input[type='checkbox']:before {
